# kk

./: CMakeLists.txt  README.md  menu.c
headers/: board.h  game.h  player.h
pis/Nkk/: Nkk.sln  Nkk.vcxproj  Nkk.vcxproj.filters  damir  game.c  game.h  global.h  main.c  main.c.backup  main.c.workbackup  menu.c  menu.h  save.c
pis/Nkk/headers/: board.h  player.h  save.h
pis/Nkk/src/: main.c  save.c
src/: board.c  game.c  main.c  player.c
